--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+@import url("https://use.typekit.net/oio2onf.css");
 
-
-*{
+* {
   box-sizing: border-box;
+}
+
+html {
+font-size: 62.5% /* using rem for font*/
+}
+
+body{
+  font-size: calc(1em + 1vw);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3 ,h4 {
+  font-family: "chainprinter", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
