--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ font-size: 62.5% /* using rem for font*/
 
 body{
   font-size: calc(1em + 1vw);
+  font-family: 'Barlow Semi Condensed', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,3 +26,4 @@ h1, h2, h3 ,h4 {
   font-weight: 400;
   font-style: normal;
 }
+
