--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,400;0,600;0,700;1,400&display=swap');
 @import url("https://use.typekit.net/oio2onf.css");
 
+:root{
+  --dark-blue: #1A3651;
+  --light-gray: #EAECEF;
+  --body-text: "Barlow Semi Condensed", sans-serif;
+  --heading-text: "chainprinter", sans-serif;
+}
+
+
 * {
   box-sizing: border-box;
 }
@@ -11,19 +19,48 @@ font-size: 62.5% /* using rem for font*/
 
 body{
   font-size: calc(1em + 1vw);
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  display: flex;
+  font-family: var(--body-text);
+  background-color: var(--dark-blue);
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 h1, h2, h3 ,h4 {
-  font-family: "chainprinter", sans-serif;
+  font-family: var(--heading-text);
   font-weight: 400;
   font-style: normal;
 }
 
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav > ul{
+  display: flex;
+  align-items: space-around;
+}
+
+nav > ul > li{
+  color: #ffffff;
+  text-transform: uppercase;
+  font-family: var(--body-text);
+  font-size: 1.7rem;
+  font-weight: 600;
+  list-style-type: none;
+  padding: 2rem;
+  margin: 0;
+}
+
+section.hero{
+  background-color: var(--light-gray);
+  margin: 0.7rem 2rem;
+  height: 700px;
+  border-radius: 1.2rem;
+}
