--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,7 @@ nav{
 nav > ul{
   display: flex;
   align-items: space-around;
+  padding: 0 0.7rem;
 }
 
 nav > ul > li{
@@ -56,6 +57,12 @@ nav > ul > li{
   list-style-type: none;
   padding: 2rem;
   margin: 0;
+  transition: all 2ms ease;
+  cursor: pointer;
+}
+
+nav > ul > li:hover{
+  transform: scale(1.2);
 }
 
 section.hero{
@@ -63,4 +70,15 @@ section.hero{
   margin: 0.7rem 2rem;
   height: 700px;
   border-radius: 1.2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title-section{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
 }
