--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,6 @@
   --heading-text: "chainprinter", sans-serif;
 }
 
-
 * {
   box-sizing: border-box;
 }
@@ -93,4 +92,51 @@ section.hero{
   margin-right: 10rem;
   /* Take out for prod */
   border: 1px solid red;
+}
+
+
+/* Testimonials Section */
+
+.testimonial-container{
+  color: var(--dark-blue);
+  background-color: var(--light-gray);
+  border-radius: 1rem;
+  margin: 1.2rem auto;
+  padding: 5rem 8rem;
+  max-width: 80vh;
+  position: relative;
+}
+
+.fa-quote{
+  color: rgba(26,54,81, 0.6);
+  font-size: 2.8rem;
+  position: absolute;
+  top: 70px;
+}
+
+.fa-quote-right{
+  left: 40px;
+}
+
+.fa-quote-left{
+  right: 40px;
+}
+
+.testimonial{
+  line-height: 2.8rem;
+  text-align: justify;
+}
+
+
+@media(max-width: 768px){
+  .fa-quote {
+    display: none;
+  }
+  .testimonial-container{
+    padding: 1rem 3rem;
+  }
+  .testimonial{
+    line-height: 1.8rem;
+    text-align: justify;
+  }
 }
