--- a/styles/main.css
+++ b/styles/main.css
@@ -107,6 +107,7 @@ section.hero{
   padding: 5rem 8rem;
   max-width: 80vh;
   position: relative;
+  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
 }
 
 .fa-quote{
