--- a/styles/main.css
+++ b/styles/main.css
@@ -50,6 +50,7 @@ nav > ul{
 }
 
 nav > ul > li{
+  display: flex;
   color: #ffffff;
   text-transform: uppercase;
   font-family: var(--body-text);
@@ -60,10 +61,22 @@ nav > ul > li{
   margin: 0;
   transition: all 2ms ease;
   cursor: pointer;
+  align-items:center;
 }
 
 nav > ul > li:hover{
   transform: scale(1.2);
+}
+
+nav svg.icon{
+  align-items: center;
+  width: 1em;
+  height: 1em;
+  font-size: 1em;
+  line-height: 100%;
+  overflow: visible;
+  display: inline-block;
+  margin-left: 5px;
 }
 
 section.hero{
