--- a/styles/main.css
+++ b/styles/main.css
@@ -43,18 +43,17 @@ a {
   text-decoration: none;
 }
 
-
-
 a:visited {
+  /* color: var(--teal); */
 }
 
 a:focus {
-  border-bottom: 1px solid;
-  background: #BAE498;
+  border-bottom: #fff;
 }
 
 
 a:active {
+  color: var(--teal);
 }
 
 nav{
