--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ h1, h2, h3 ,h4 {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 a:visited {
@@ -148,11 +149,9 @@ nav svg.icon{
   /* Add in dropdown menu */
   display: block;
   position: absolute;
-  right: 5rem;
   top: 12rem;
   height: 100px;
   border-radius: 6px;
-  width: 30%;
   background-color: #fff;
   color: var(--dark-blue);
   box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
