--- a/styles/main.css
+++ b/styles/main.css
@@ -82,6 +82,7 @@ nav > ul{
   align-items: center;
   padding: 0 1rem;
   margin-right: 1rem;
+  z-index: 10;
 }
 
 nav > ul > li{
@@ -137,24 +138,29 @@ nav svg.icon{
   }
 }
 
-.drop-down-two:hover > .animate{
+.drop-down:hover > .animate{
   margin-left: 5px;
   animation: 0.4s 1 normal forwards running more;
   scale: 1;
 }
 
-
-
 .nav-dropdown{
   /* Add in dropdown menu */
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: absolute;
+  padding: 1rem;
   top: 5rem;
-  height: 20rem;
-  border-radius: 6px;
+  border-radius: 0.25em;
   background-color: #fff;
   color: var(--dark-blue);
   box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
+  visibility: hidden;
+}
+
+.nav-dropdown.visible{
+  visibility: visible;
+  animation: fade-in-top 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .nav-dropdown li{
