--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ font-size: 62.5% /* using rem for font*/
 body{
   font-size: calc(1em + 1vw);
   font-family: var(--body-text);
-  background-color: var(--dark-blue);
+  /* background-color: var(--dark-blue); */
   /* display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,6 +32,10 @@ body{
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+.main{
+  background-color: var(--dark-blue);
 }
 
 h1, h2, h3 ,h4 {
@@ -63,6 +67,7 @@ a:active {
 }
 
 nav{
+  background-color: var(--dark-blue);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -309,6 +314,29 @@ button:hover span::before, button:hover span::after{
   height: 50px;
 }
 
+/* Explore page */
+
+.top-blue {
+  clip-path: polygon(0 0,100% 0,100% calc(100% - 100px),50% 100%,0 calc(100% - 100px));
+  background-color: var(--dark-blue);
+  height: 50vh;
+  width: 100%;
+  position: relative;
+}
+
+.top-blue h2{
+  color: var(--light-gray);
+  margin: 0;
+  padding: 5rem;
+  text-align: center;
+  padding-top: 10rem;
+}
+
+.bottom {
+  background-color: var(--light-gray);
+  clip-path: polygon(0 0,50% 100px,100% 0,100% 100%,0 100%);
+  margin-top: -92px;
+}
 
 
 /* Testimonials Section */
@@ -403,10 +431,4 @@ button:hover span::before, button:hover span::after{
     line-height: 1.8rem;
     text-align: justify;
   }
-}
-
-
-.anchoring{
-  height: 100vh;
-  background-color: var(--dark-blue);
 }
