--- a/styles/main.css
+++ b/styles/main.css
@@ -323,7 +323,7 @@ button:hover span::before, button:hover span::after{
 /* Explore page */
 
 .top-blue {
-  clip-path: polygon(0 0,100% 0,100% calc(100% - 100px),50% 100%,0 calc(100% - 100px));
+  clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px));
   background-color: var(--dark-blue);
   height: 50vh;
   width: 100%;
@@ -340,9 +340,37 @@ button:hover span::before, button:hover span::after{
 
 .bottom {
   background-color: var(--light-gray);
-  clip-path: polygon(0 0,50% 100px,100% 0,100% 100%,0 100%);
+  clip-path: polygon(0 0,100% 100px,100% 100%,0 100%);
   margin-top: -92px;
 }
+
+/* Footer Section */
+footer.blue{
+  width: 100%;
+  height: 20vh;
+  padding-top: 5rem;
+  padding-left: 5rem;
+  display: flex;
+  justify-content: space-between
+}
+
+footer.blue h3, footer.blue h4{
+  color: #ffffff;
+  font-size: 2rem;
+}
+
+footer.blue span.contact{
+  letter-spacing: 1px;
+  font-size: 1.7rem;
+  font-family: var(--body-text);
+}
+
+footer.blue ul{
+  color: #ffffff;
+  list-style-type: none;
+}
+
+
 
 
 /* Testimonials Section */
