TODO: footer styling add

--- a/styles/main.css
+++ b/styles/main.css
@@ -514,6 +514,7 @@ footer.grey ul{
   gap: 10px;
 }
 
+/* TODO: Add Media Query for min-width: 570px; Adjust font-size & gap */
 
 /* Testimonials Section */
 
