--- a/styles/main.css
+++ b/styles/main.css
@@ -71,8 +71,12 @@ a:active {
 .open-btn{
   position: fixed;
   top: 30px;
-  left: 30px;
+  left: 50px;
   color: var(--med-blue);
+}
+
+.open-btn:hover{
+  color: var(--dark-blue);
 }
 
 .close-btn{
@@ -92,7 +96,7 @@ a:active {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  font-size: 1.8rem;
+  font-size: 2.3rem;
 }
 .nav {
   position: fixed;
