--- a/styles/main.css
+++ b/styles/main.css
@@ -440,24 +440,13 @@ button:hover span::before, button:hover span::after{
 /* Explore page */
 
 .top-blue {
-  /* clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px)); */
+  clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px));
   background-color: var(--dark-blue);
-  height: auto;
+  height: 60rem;
   width: 100%;
   position: relative;
 }
-.top-blue::after {
-  content: '';
-  border-bottom-left-radius: 50% 100%;
-  border-bottom-right-radius: 50% 100%;
-  position: absolute;
-  bottom: -10;
-  z-index: -1;
-  width: 100%;
-  background-color: var(--dark-blue);
-  height: 65%;
-  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
-}
+
 
 .top-blue h2{
   font-size: 4rem;
@@ -467,11 +456,19 @@ button:hover span::before, button:hover span::after{
   text-align: center;
   padding-top: 10rem;
 }
+.top-blue .md-center{
+  width: 60%;
+  margin: 0 auto;
+}
 
 #video{
   margin-top: 20rem;
   margin-left: 2rem;
 }
+
+/* TODO: Media Queries for Explore page */
+
+
 
 /* Explore page styling end */
 
