--- a/styles/main.css
+++ b/styles/main.css
@@ -447,18 +447,14 @@ button:hover span::before, button:hover span::after{
   position: relative;
 }
 
-
 .top-blue h2{
   font-size: 4rem;
   color: var(--light-gray);
-  margin: 0;
+  margin: 0 auto;
   padding: 5rem;
   text-align: center;
   padding-top: 10rem;
-}
-.top-blue .md-center{
   width: 60%;
-  margin: 0 auto;
 }
 
 #video{
@@ -468,7 +464,13 @@ button:hover span::before, button:hover span::after{
 
 /* TODO: Media Queries for Explore page */
 
-
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .top-blue h2{
+    font-size: 3rem;
+    width: 100%;
+  }
+}
 
 /* Explore page styling end */
 
