--- a/styles/main.css
+++ b/styles/main.css
@@ -564,6 +564,42 @@ footer.grey ul{
   gap: 10px;
 }
 
+.footer-right > .menu-nav li{
+  font-size: calc(1.2rem + 1vw);
+  position:relative;
+  display: inline-block;
+  transition: scale 0.2ms ease-in;
+}
+
+.footer-right > .menu-nav li:hover::after{
+  --link-color: 102, 153, 255;
+  content:"";
+  display:block;
+  position: absolute;
+  width: 100%;
+  height: 0.4rem;
+	bottom: -0.5rem;
+  /* Gradient */
+  background-image: linear-gradient(
+		to right,
+		transparent 0%,
+		rgba(var(--link-color), .6) 30%,
+		rgba(var(--link-color), .7) 50%,
+		rgba(var(--link-color), .6) 70%,
+		transparent 100%
+	);
+  /* Set-up fade-in animation */
+	opacity: 0;
+	animation: fadeUnderlineIn 400ms ease-out forwards;
+}
+
+/* Fade-in animation */
+@keyframes fadeUnderlineIn {
+	100% {
+		opacity: 1;
+	}
+}
+
 /* TODO: Add Media Query for min-width: 570px; Adjust font-size & gap */
 
 /* Testimonials Section */
