--- a/styles/main.css
+++ b/styles/main.css
@@ -523,8 +523,7 @@ nav.explore-nav{
 
 
 /* Footer Section */
-footer.grey{
-  background-color:var(--light-gray);
+footer{
   margin-top: 10rem;
   width: 100%;
   height: 20vh;
@@ -534,22 +533,30 @@ footer.grey{
   justify-content: space-between
 }
 
-footer.grey h3, footer.grey h4{
-  color: var(--dark-blue);
-  font-size: 2rem;
+footer h3{
+  font-size: 2.2rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
 
-footer.grey span.contact{
+footer.grey{
+  color: var(--dark-blue);
+  background-color: var(--light-gray);
+}
+
+footer.blue{
+  color: var(--light-gray);
+  background-color: var(--dark-blue);
+}
+
+footer span.contact{
   letter-spacing: 1px;
   font-size: 1.7rem;
   font-family: var(--body-text);
-  color: var(--dark-blue);
   padding-left: 1rem;
 }
 
-footer.grey ul{
+footer ul{
   color: var(--dark-blue);
   list-style-type: none;
 }
@@ -600,7 +607,7 @@ footer.grey ul{
 	}
 }
 
-/* TODO: Add Media Query for min-width: 570px; Adjust font-size & gap */
+/* TODO: For Footer: Add Media Query for min-width: 570px; Adjust font-size & gap */
 
 /* Testimonials Section */
 
