--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,12 @@
   --light-gray: #EAECEF;
   --teal: #45C4B0;
   --purple: #955695;
+
   --body-text: "Barlow Semi Condensed", sans-serif;
   --heading-text: "chainprinter", sans-serif;
+  --fw-reg: 400;
+  --fw-bold: 700;
+
 }
 
 * {
@@ -22,7 +26,7 @@ font-size: 62.5% /* using rem for font*/
 }
 
 body{
-  font-size: calc(1em + 1vw);
+  font-size: calc(1rem + 1vw);
   font-family: var(--body-text);
   /* background-color: var(--dark-blue); */
   /* display: flex;
@@ -40,7 +44,7 @@ body{
 
 h1, h2, h3 ,h4 {
   font-family: var(--heading-text);
-  font-weight: 400;
+  font-weight: var(--fw-reg);
   font-style: normal;
   color: var(--dark-blue);
 }
