--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,6 @@
   --heading-text: "chainprinter", sans-serif;
   --fw-reg: 400;
   --fw-bold: 700;
-
 }
 
 * {
@@ -336,6 +335,7 @@ section.hero{
   flex-direction: column;
   align-items:center;
   justify-content: center;
+  padding-bottom: 7rem;
   height: 80%;
   width: 100%;
 }
@@ -382,7 +382,7 @@ img.carousel-img{
   width: auto;
   margin-top: -30px;
   padding: 16px;
-  color: #888;
+  color: var(--dark-blue-300);
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
@@ -404,8 +404,8 @@ img.carousel-img{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
+  background-color: var(--med-blue);
+  color: var(--light-gray);
 }
 
 .dot-container{
@@ -417,7 +417,7 @@ img.carousel-img{
   height: 0.8rem;
   width: 0.8rem;
   margin: 0 2px;
-  background-color: #45c4b0;
+  background-color: var(--teal);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -425,13 +425,13 @@ img.carousel-img{
 
 /* Add a background color to the active dot/circle */
 .active, .dot:hover {
-  background-color: #1a3651;
+  background-color: var(--dark-blue);
 }
 
 button.btn-1{
-  display: inline-block;
-  position: absolute;
   display: flex;
+  position: absolute;
+  bottom: 8rem;
   align-self: end;
   font-size: 2rem;
   margin-right: 10rem;
