Carousel dot and button fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -315,6 +315,7 @@ nav svg.icon{
 
 /* Hero Carousel */
 section.hero{
+  position:relative;
   background-color: var(--light-gray);
   color: var(--dark-blue);
   margin: 0.7rem 2rem;
@@ -394,13 +395,13 @@ img.carousel-img{
 /* Position the "next button" to the right */
 .next {
   position: absolute;
-  right: 2rem;
+  right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 .prev{
   position: absolute;
-  left: 2rem;
+  left: 0;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -432,7 +433,7 @@ img.carousel-img{
 button.btn-1{
   display: flex;
   position: absolute;
-  bottom: 8rem;
+  bottom: 4rem;
   align-self: end;
   font-size: 2rem;
   margin-right: 10rem;
