--- a/styles/main.css
+++ b/styles/main.css
@@ -533,12 +533,14 @@ button:hover span::before, button:hover span::after{
 nav.explore-nav{
   box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
 }
+
 .top-blue {
   clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px));
   background-color: var(--dark-blue);
-  height: 60rem;
+  height: 50rem;
   width: 100%;
   position: relative;
+  z-index: -100;
 }
 
 .hex-pattern{
@@ -589,10 +591,21 @@ nav.explore-nav{
     opacity:1;
   }
 }
-.icon-link {
+.icon-style-container{
   width: 100%;
+  height: 10vh;
+  position: absolute;
+  bottom: 10rem;
+  z-index: 100;
 }
-.icon-link svg {
+
+.icon-style-container::after{
+  content: '';
+  position: absolute;
+  bottom:0;
+}
+
+.icon-style-container svg {
   width: 300px;
   height: 100px;
 }
