--- a/styles/main.css
+++ b/styles/main.css
@@ -311,6 +311,35 @@ nav svg.icon{
   padding: 0.2rem;
 }
 
+.nav-dropdown li{
+  font-size: calc(0.5rem + 1vw);
+  position:relative;
+  display: inline-block;
+  transition: scale 0.2ms ease-in;
+}
+
+.nav-dropdown li:hover::after{
+  --link-color: 102, 153, 255;
+  content:"";
+  display:block;
+  position: absolute;
+  width: 100%;
+  height: 0.3rem;
+	bottom: -0.5rem;
+  /* Gradient */
+  background-image: linear-gradient(
+		to right,
+		transparent 0%,
+		rgba(var(--link-color), .6) 30%,
+		rgba(var(--link-color), .7) 50%,
+		rgba(var(--link-color), .6) 70%,
+		transparent 100%
+	);
+  /* Set-up fade-in animation */
+	opacity: 0;
+	animation: fadeUnderlineIn 400ms ease-out forwards;
+}
+
 .dropdown{
   color: var(--dark-blue);
   font-family: var(--body-text);
@@ -688,7 +717,7 @@ footer ul{
   transition: scale 0.2ms ease-in;
 }
 
-.footer-right > .menu-nav li:hover::after{
+.footer-right > .menu-nav li:hover::after, .nav-dropdown li:hover::after{
   --link-color: 102, 153, 255;
   content:"";
   display:block;
