--- a/styles/main.css
+++ b/styles/main.css
@@ -568,10 +568,13 @@ button:hover span::before, button:hover span::after{
 
 /* Explore page */
 nav.explore-nav{
-  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
+  position: sticky;
+  top: 0;
+  /* box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5); */
 }
 
 .top-blue {
+  box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
   /* clip-path: polygon(0 0,100% 0,100% 100%,0 calc(100% - 100px)); */
   background-color: var(--dark-blue);
   height: 50rem;
@@ -607,16 +610,16 @@ nav.explore-nav{
   margin: 0 auto;
   padding: 5rem;
   text-align: center;
-  padding-top: 13rem;
+  padding-top: 8rem;
   width: 60%;
 }
 
 .fade-in {
-  animation: fadeIn ease 3s;
-  -webkit-animation: fadeIn ease 3s;
-  -moz-animation: fadeIn ease 3s;
-  -o-animation: fadeIn ease 3s;
-  -ms-animation: fadeIn ease 3s;
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
 }
 
 @keyframes fadeIn{
@@ -632,7 +635,7 @@ nav.explore-nav{
   width: 100%;
   position: absolute;
   text-align:center;
-  bottom: 5rem;
+  bottom: 8rem;
   z-index: 100;
 }
 
@@ -643,9 +646,35 @@ nav.explore-nav{
 }
 
 .icon-style-container svg {
-  width: 200px;
+  width: 175px;
   height: 100px;
 }
+
+/* TODO: tighten up animation */
+.icon-fade-in {
+  animation: icon-fadeIn ease 3s;
+  -webkit-animation: icon-fadeIn ease 3s;
+  -moz-animation: icon-fadeIn ease 3s;
+  -o-animation: icon-fadeIn ease 3s;
+  -ms-animation: icon-fadeIn ease 3s;
+}
+
+@keyframes icon-fadeIn{
+  0% {
+    opacity:0;
+    transform: translateY(100%);
+  }
+  25% {
+    opacity: 0;
+  }
+  50%{
+    opacity: 0.50;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
 
 #video{
   margin-top: 10rem;
@@ -656,9 +685,16 @@ nav.explore-nav{
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
+  .top-blue{
+    height: 40rem;
+  }
   .top-blue h2{
     font-size: 3rem;
     width: 100%;
+  }
+  .icon-style-container svg {
+    width: 100px;
+    height: 50px;
   }
 }
 
