Add div for each icon to bring in one at a time

--- a/styles/main.css
+++ b/styles/main.css
@@ -634,9 +634,11 @@ nav.explore-nav{
 .icon-style-container{
   width: 100%;
   position: absolute;
-  text-align:center;
   bottom: 10rem;
   z-index: 100;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .icon-style-container::after{
