Navigation updates to services/explore page

--- a/styles/main.css
+++ b/styles/main.css
@@ -678,9 +678,9 @@ nav.explore-nav{
 }
 
 
-#video{
-  margin-top: 10rem;
-  margin-left: 2rem;
+#video-section{
+  margin-top: 6rem;
+  margin-left: 4rem;
 }
 
 /* TODO: Media Queries for Explore page */
