--- a/styles/services.css
+++ b/styles/services.css
@@ -112,13 +112,15 @@ nav.explore-nav{
   height: 5px;
   background: var(--lt-blue);
   position: absolute;
-  width: 25%;
+  width: 25rem;
   bottom: -10px;
   z-index: -1;
   transform: skew(-20deg) rotate(var(--rotate)) scaleX(var(--scaleX));
 }
 
 .video-example{
+  position:relative;
+  z-index: -2;
   padding-top: 2rem;
 }
 
