--- a/styles/main.css
+++ b/styles/main.css
@@ -18,16 +18,19 @@
   --scaleX: 1;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5% /* using rem for font*/
+  font-size: 100%;
 }
 
 body{
-  font-size: calc(1rem + 1vw);
+  font-size: 1.2rem;
+  /* font-size: calc(1rem + 0.8vw);  */
   font-family: var(--body-text);
   /* background-color: var(--dark-blue); */
   /* display: flex;
@@ -51,10 +54,10 @@ h1, h2, h3 ,h4 {
   color: var(--dark-blue);
 }
 
-h1 {font-size: 3.815rem;}
-h2 {font-size: 3.052rem;}
-h3{font-size: 2.441rem;}
-h4{font-size: 1.953rem;}
+h1 {font-size: 3.052rem;}
+h2 {font-size: 2.441rem;}
+h3 {font-size: 1.953rem;}
+h4 {font-size: 1.563rem;}
 
 a {
   text-decoration: none;
@@ -119,7 +122,7 @@ img, video {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  font-size: 2.3rem;
+  font-size: 1.6rem;
 }
 .nav {
   position: fixed;
@@ -140,7 +143,7 @@ img, video {
 }
 
 .nav > .logo{ 
-  width: 20rem;
+  width: 10rem;
 }
 
 .text {
@@ -173,7 +176,7 @@ img, video {
 .nav-med-blue{
   background-color: var(--dark-blue);
   width: 95%;
-  padding: 40px;
+  padding: 2rem;
   position: relative;
   transition-delay: 0s;
 }
@@ -189,7 +192,7 @@ img, video {
 }
 
 .list li {
-  margin: 20px;
+  margin: 1rem;
 }
 
 .list li a{
@@ -202,7 +205,7 @@ img, video {
 
 .list ul {
   list-style-type: none;
-  padding-left: 20px;
+  padding-left: 1.2rem;
 }
 
 /* End Mobile Nav */
@@ -226,14 +229,14 @@ nav .logo{
   background-size: contain;
   background-repeat: no-repeat;
   margin-left: 2rem;
-  height: 5.8rem;
+  height: 3.8rem;
   width: 100%;
 }
 
 nav > ul{
   display: flex;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   margin-right: 1rem;
   z-index: 10;
 }
@@ -243,10 +246,10 @@ nav > ul > li{
   color: #ffffff;
   text-transform: uppercase;
   font-family: var(--body-text);
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   font-weight: 600;
   list-style-type: none;
-  padding: 1.2rem;
+  padding: 1rem;
   margin: 1rem;
   transition: transform .2s ease-in, color 0.3s ease-in;
   cursor: pointer;
@@ -259,9 +262,9 @@ nav > ul > li:hover{
 }
 
 nav svg.icon{
-  width: 1em;
-  height: 1em;
-  font-size: 1em;
+  width: 1rem;
+  height: 1rem;
+  font-size: 1rem;
   line-height: 100%;
   overflow: visible;
   display: inline-block;
@@ -298,22 +301,23 @@ nav svg.icon{
   display: flex;
   flex-direction: column;
   position: absolute;
-  padding: 1rem;
-  top: 5rem;
+  padding: 0.8rem;
+  left:0;
+  top: 3rem;
   border-radius: 0.25em;
   background-color: #fff;
   color: var(--dark-blue);
   box-shadow: 0 0 0.5rem rgb(76, 66, 76, 0.5);
-  width: 15rem;
+  width: 10rem;
   visibility: hidden;
 }
 
 .nav-dropdown ul {
-  padding-inline-start: 1rem;
+  padding-inline-start: 0.5rem;
 }
 
 .nav-dropdown > ul > li{
-  padding: 0.5rem 0;
+  padding: 0.3rem 0;
 }
 
 .nav-dropdown.visible{
@@ -322,7 +326,7 @@ nav svg.icon{
 }
 
 .nav-dropdown li{
-  font-size: 1.8rem;
+  font-size: 1.1rem;
   position:relative;
   display: inline-block;
   transition: scale 0.2ms ease-in;
@@ -334,8 +338,8 @@ nav svg.icon{
   display:block;
   position: absolute;
   width: 100%;
-  height: 0.3rem;
-	bottom: -0.1rem;
+  height: 0.2rem;
+	bottom: 0rem;
   /* Gradient */
   background-image: linear-gradient(
 		to right,
@@ -381,19 +385,19 @@ section.hero{
   flex-direction: column;
   align-items:center;
   justify-content: center;
-  padding-bottom: 7rem;
+  padding-bottom: 5rem;
   height: 80%;
   width: 100%;
 }
 
 .title-section h1{
-  font-size: 2.2em;
-  font-weight: 700;
+  font-size: 3.2rem;
+  font-weight: var(--fw-bold);
   margin-bottom: 0;
 }
 
 .title-section h2 {
-  font-size: 1.2em;
+  font-size: 1.3rem;
   color:var(--dark-blue-300);
   letter-spacing: -1px;
 }
@@ -424,7 +428,7 @@ img.carousel-img{
   top: 50%;
   width: auto;
   margin-top: -30px;
-  padding: 16px;
+  padding: 1rem;
   color: var(--dark-blue-300);
   font-weight: bold;
   font-size: 20px;
@@ -453,12 +457,12 @@ img.carousel-img{
 
 .dot-container{
   position: absolute;
-  bottom: 7rem;
+  bottom: 5rem;
 }
 .dot {
   cursor: pointer;
-  height: 0.8rem;
-  width: 0.8rem;
+  height: 0.6rem;
+  width: 0.6rem;
   margin: 0 2px;
   background-color: var(--teal);
   border-radius: 50%;
@@ -474,11 +478,10 @@ img.carousel-img{
 button.btn-1{
   display: flex;
   position: absolute;
-  bottom: 4rem;
+  bottom: 2.2rem;
   align-self: end;
-  font-size: 2rem;
-  margin-right: 10rem;
-  padding: 1rem 1rem;
+  margin-right: 6rem;
+  padding: 0.7rem 0.5rem;
   border: none;
   background: none;
 }
@@ -534,7 +537,7 @@ button:hover span::before, button:hover span::after{
 .explore-button{
   font-family:var(--body-text);
   font-weight: 600;
-  font-size: 2.3rem;
+  font-size: 1.6rem;
   display: flex;
   align-self: flex-end;
   color: var(--dark-blue);
@@ -563,8 +566,12 @@ button:hover span::before, button:hover span::after{
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   button.btn-1 {
-    font-size: 1rem;
-    bottom: 20rem;
+    bottom: 1rem;
+    margin-right: 1rem;
+    padding: 0.4rem 0.5rem;
+  }
+  .explore-button{
+    font-size: 1.2rem;
   }
 }
 
@@ -573,19 +580,19 @@ button:hover span::before, button:hover span::after{
 
 /* Footer Section */
 footer{
-  margin-top: 10rem;
+  margin-top: 2rem;
   width: 100%;
   height: 20vh;
-  padding-top: 5rem;
-  padding-left: 5rem;
+  padding-top: 2.5rem;
+  padding-left: 2.5rem;
   display: flex;
   justify-content: space-between
 }
 
 footer h3{
-  font-size: 2.2rem;
+  font-size: 1.563rem;;
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
 footer.grey{
@@ -600,9 +607,9 @@ footer.blue{
 
 footer span.contact{
   letter-spacing: 1px;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
   font-family: var(--body-text);
-  padding-left: 1rem;
+  padding-left: 0.8rem;
 }
 
 footer ul{
@@ -611,19 +618,19 @@ footer ul{
 }
 
 .footer-right{
-  margin-left: 3rem;
-  margin-right: 2.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2rem;
 }
 
 .footer-right > .menu-nav{
-  margin-right: 7rem;
+  margin-right: 4rem;
   display: flex;
   width: 50%;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .footer-right > .menu-nav li{
-  font-size: calc(1.0rem + 1vw);
+  font-size: calc(1.0rem + 0.5vw);
   position:relative;
   display: inline-block;
   transition: scale 0.2ms ease-in;
@@ -662,7 +669,7 @@ footer ul{
 
 @media only screen and (max-width: 768px) {
   footer h3{
-    font-size: calc(1.2rem + 1vw);
+    font-size: calc(1.2rem + 0.5vw);
   }
   .footer-right > .menu-nav{
     gap: 0.5rem;
