--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,7 @@ body{
   justify-content: center; */
   margin: 0;
   padding: 0;
-  overflow-x:hidden;
+  /* overflow-x:hidden; */
 }
 
 .main{
@@ -668,6 +668,7 @@ footer ul{
 
 
 @media only screen and (max-width: 768px) {
+
   footer h3{
     font-size: calc(1.2rem + 0.5vw);
   }
