--- a/styles/services.css
+++ b/styles/services.css
@@ -130,7 +130,70 @@ nav.explore-nav{
 .video-section p{
   font-size: calc(1rem + 0.5vw);
 }
+/* Media Scroller */
 
+
+.horizontal-media-scroller {
+  --size: 150px;
+  --gap: 2rem;
+
+  display: grid;
+  grid-auto-flow: column;
+  gap: calc(var(--gap) / 2);
+  margin: 0;
+
+  padding-inline-start: var(--gap);
+  padding-inline-end: var(--gap);
+  padding-block-start: calc(var(--gap) / 2);
+  padding-block-end: calc(var(--gap) / 2);
+
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+  scroll-snap-type: inline mandatory;
+  scroll-padding-left: var(--gap);
+  scroll-padding-right: var(--gap);
+  scroll-padding-inline: var(--gap);
+}
+@media (prefers-reduced-motion: no-preference) {
+  scroll-behavior: smooth;
+}
+
+.horizontal-media-scroller > li {
+  display: inline-block;
+}
+ /*  container padding fix  */
+.horizontal-media-scroller > li:last-of-type figure {
+  position: relative;
+}
+.horizontal-media-scroller > li:last-of-type figure::after {
+  content: "";
+  position: absolute;
+
+  inline-size: var(--gap);
+  block-size: 100%;
+
+  inset-block-start: 0;
+  inset-inline-end: calc(var(--gap) * -1);
+}
+.horizontal-media-scroller > li:last-of-type figure::after figure {
+    scroll-snap-align: start;
+}
+.horizontal-media-scroller > li:last-of-type figure::after figure a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    outline-offset: 12px;
+}
+.horizontal-media-scroller > li:last-of-type figure::after figure a:focus {
+      outline-offset: 7px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  transition: outline-offset .25s ease;
+}
+
+
+/* End Media Scroller */
 
 .design-section h2::before{
   width: 9rem;
