Aria labels added to carousel

--- a/styles/main.css
+++ b/styles/main.css
@@ -409,7 +409,7 @@ section.hero{
 .title-section{
   overflow: hidden;
 }
-.image-container {
+.carousel-container {
   position:relative;
   width: 100%;
   height: 100%;
