--- a/styles/services.css
+++ b/styles/services.css
@@ -220,6 +220,21 @@ nav.explore-nav{
   box-shadow: 0 3px 5px -2px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 3%)),0 7px 14px -5px hsl(var(--shadow-color)/calc(var(--shadow-strength) + 5%));
 }
 
+.media-element > img {
+  inline-size: 100%;
+  aspect-ratio: 16 /9;
+  object-fit: cover;
+}
+
+.snaps-inline{
+  scroll-snap-type: inline mandatory;
+  scroll-padding-inline: var(--_spacer, 1rem);
+}
+
+.snaps-inline > * {
+  scroll-snap-align: start;
+}
+
 /* End Media Scroller */
 
 .design-section{
